--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
             3. Paste this code there and name your CSS file "styles".<br>
             4. Save the changes and your html file will be linked to your CSS file.
           </p>
+          <img src="Linking css to html.png"><br>
             
           <u><h4>Note:</h4></u>
             <p><b>Making separate file for html and CSS will be more convenient and easier.</b></p>
