--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="#step4">Step-4</a></li>
         
    <section>
-    <a href="https://github.com/ManasCodez/LearnToCube/blob/main/README.md#-about-me"> <button class="button">About Me
+    <a href="https://github.com/ManasCodez"> <button class="button">About Me
     </button></a>
     </section>
   
