--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li class="nav-item"><a href="#step2">Step 2: Design</a></li>
         <li class="nav-item"><a href="#step3">Step 3: Development</a></li>
         <li class="nav-item"><a href="#step4">Step 4: Launch</a></li>
-        <li class="nav-item"><a href="https://github.com/ManasCodez" class="about-btn">About Me</a></li>
+        <li class="nav-item"><a href="https://manascodez.github.io/Portfolio/" class="about-btn">About Me</a></li>
       </ul>
     </nav>
 
